<resources>
    <string name="app_name">Minecraft Builders</string>

    <string name="search_title">Search</string>
    <string name="search_hint">Search here…</string>

    <string name="drawer_building">Building</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_russia">Russian</string>
    <string name="drawer_english">English</string>
    <string name="drawer_about_us">About us</string>
    <string name="drawer_rate_us">Rate us</string>

    <string name="empty_favorite_text">no favorite buildings</string>
    <string name="empty_favorite_plus">do you know that can add lot of building to favorite? so do this as soon as it possibly</string>
    <string name="no_search_text">no search results</string>
</resources>
